--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.290.0",
     "next": "13.4.12",
-    "next-cloudinary": "^4.28.0",
+    "next-cloudinary": "^4.16.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^1.14.0",
@@ -33,7 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6"
   }
 }
