--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --coverage",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
