--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
